# intelligent-slack-knowledge-base

./: .dockerignore  .env.example  .gcloudignore  .gitignore  ANALYSIS_AND_PLAN.md  ARCHITECTURE.md  Dockerfile  PHASES.md  README.md  manifest.json  pyproject.toml  render.yaml  slack-manifest.yaml  vercel.json
.slack/: hooks.json
api/: health.js  ready.js
dashboard/: package-lock.json
dashboard/src/: App.jsx  index.css
docs/: DEMO_SCRIPT.md  EVALUATION_AUDIT.md  GOOGLE_CLOUD_VERCEL_DEPLOYMENT.md  RENDER_DEPLOYMENT.md  SLACK_SETUP.md  SUPABASE_SETUP.md
evals/: BASELINE.md  README.md  golden_dataset.json
public/: index.html
scripts/: start-demo.ps1
src/slack_kb/: __init__.py  answer_graph.py  api.py  chunking.py  commands.py  config.py  database.py  evaluation.py  gemini_service.py  ingestion.py  main.py  migrate.py  models.py  openai_service.py  parsers.py  render_app.py  runtime.py  scale_smoke.py  security.py  slack_app.py  slack_formatting.py  slack_threads.py
supabase/: config.toml
supabase/migrations/: 202606130001_initial.sql  202606220001_gemini_embeddings.sql
tests/: test_api.py  test_chunking.py  test_citations.py  test_commands.py  test_evaluation.py  test_ingestion_permissions.py  test_runtime.py  test_security.py  test_slack_threads.py
