[project]
name = "intelligent-slack-knowledge-base"
version = "0.1.0"
description = "Permission-aware, cited RAG knowledge assistant built natively for Slack."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.13.4",
  "fastapi>=0.116.1",
  "httpx>=0.28.1",
  "langgraph>=0.6.0",
  "openai>=1.93.0",
  "pgvector>=0.4.1",
  "psycopg[binary,pool]>=3.2.9",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "pypdf>=5.7.0",
  "python-docx>=1.2.0",
  "slack-bolt>=1.23.0",
  "tenacity>=9.1.2",
  "trafilatura>=2.0.0",
  "uvicorn[standard]>=0.35.0",
]

[project.scripts]
slack-kb = "slack_kb.main:main"
slack-kb-api = "slack_kb.api:run"
slack-kb-eval = "slack_kb.evaluation:main"
slack-kb-migrate = "slack_kb.migrate:main"

[dependency-groups]
dev = [
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "ruff>=0.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slack_kb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
